@@ -150,6 +150,24 @@ __fsopen (struct __unixlib_fd *file_desc, const char *filename, int mode)
   if (end_of_filename == NULL)
     return (void *) __set_errno (ENAMETOOLONG);
 
+#if __UNIXLIB_SYMLINKS > 0
+  {
+  char target[MAXPATHLEN + 2];
+
+    if (__resolve_symlinks (file, target, MAXPATHLEN) != 0)
+      return (void *)-1;
+
+    /* Pass through __riscosify() again to get the true end_of_filename and at the
+       same time copy the resolved filename back to file[]. */
+    end_of_filename = __riscosify (target,
+				   fflag & (O_CREAT | O_WRONLY | O_RDWR),
+				   __RISCOSIFY_NO_PROCESS,
+				   file, sizeof (file) - 2, &sftype);
+    if (end_of_filename == NULL)
+      return (void *) __set_errno (ENAMETOOLONG);
+  }
+#endif
+
   /* Get file vital statistics.  */
   if ((err = __os_file (OSFILE_READCATINFO, file, regs)))
     goto os_err;
