@@ -1,3 +1,14 @@
+Sat Aug 4 18:53:54 2007  Lee Noar  <leenoar@sky.com>
+
+	* unix/dev.c: Add support for symlink files.
+	* include/unixlib/buildoptions.h: Likewise.
+	* include/unixlib/unix.h: Likewise.
+	* common/objattr.c: Likewise.
+	* common/exist.c: Likewise.
+	* common/symlinks.c: New file. Implement symlink file processing.
+	Primarily for use by GCC so that, eg, -lstdc++ will find symlink
+	libstdc++.so which in turn points to libstdc++.6.0.8.so.
+
 Sat Aug 4 17:39:01 2007  Lee Noar  <leenoar@sky.com>
 
 	* vscript: Remove __pthread_cleanup_pop & __pthread_cleanup_push to
